docker/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 5672

    # TCP Filter
    filter_chains:
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: ingress_tcp
          cluster: amqp_server
          access_log:
            - name: envoy.file_access_log
              config:
                path: /dev/stdout

  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 15672

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: dashboard_server
            virtual_hosts:

            - name: dashboard_server
              domains: ["*"]
              routes:

              - match:
                  prefix: "/"
                route:
                  cluster: dashboard_server
                  retry_policy:
                    retry_on: "5xx"
                    num_retries: 10
                    per_try_timeout: 2s
                    
          http_filters:
          - name: envoy.router

  clusters:
  - name: amqp_server
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: least_request
    hosts:
    - socket_address:
        address: rabbitmq01
        port_value: 5672
    - socket_address:
        address: rabbitmq02
        port_value: 5672
    - socket_address:
        address: rabbitmq03
        port_value: 5672

  - name: dashboard_server
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: least_request
    hosts:
    - socket_address:
        address: rabbitmq01
        port_value: 15672
    - socket_address:
        address: rabbitmq02
        port_value: 15672
    - socket_address:
        address: rabbitmq03
        port_value: 15672

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
